# CircuitPython_4x7_Segment_Display

./: LICENSE  README.rst  README.rst.license  circuitpython_4x7_segment_display.py  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
examples/: 4x7_segment_display_simpletest.py
