# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2024 G. Yoder for Steel City Codes Denver
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "adafruit-circuitpython-4x7-segment-display"
description = "A library that can run a multiplexed 4x7 segment display without any external IC's for CircuitPython. Intended for education and teaching."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Steel City Codes Denver"}
]
urls = {Homepage = "https://github.com/gyoder/Adafruit_CircuitPython_4x7_Segment_Display"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "4x7_segment_display",
    "7",
    "segment",
    "multiplex",
    "LED",
    "numaric",
    "display",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["adafruit_4x7_segment_display"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
